# Agentic-AI-Langgraph-

./: .gitignore  Corrective_RAG.ipynb  LICENSE  Persistence_concept.ipynb  chatbot_workflow.ipynb
Blog Writing Agent/: advances_in_ai_llms_2022-2026.md  backend.py  blog_writer.ipynb  blog_writer_reasearch.ipynb
Chatbot Building/: chatbot.db  chatbot_backend.py  chatbot_frontend.py  chatbot_tool_backend.py  chatbot_tool_frontend.py  chatbot_with_db_frontend.py  test.ipynb
Chatbot MCP/: ARCHITECTURE.md  CHANGES SUMMARY.md  QUICKSTART.md  README.md  chatbot_mcp.db-shm  chatbot_mcp.db-wal  launch.bat  mcp-chatbot-frontend.py  mcp-tools-local.py  mcp_chatbot_backend_client.py  pyproject.toml  requirements.txt  test_setup.py
Conditional Workflow/: Quadratic_without_llm_workflow.ipynb  Review Handling with LLMs workflow.ipynb
Fastapi MCP chatbot/: QUICKSTART.md  README.md  SUMMARY.md  chatbot_fastapi_mcp.db-shm  chatbot_fastapi_mcp.db-wal  index.html  main.py  requirements.txt  start.bat  start.sh  test_setup.py
HITL/: HITL_backend.py  HITL_frontend.py  README.md  chatbot.db
Iterative/: X_Post_Generation.ipynb
MCP/: expenses.db  mcp-server-local.py
Parellel Workflow/: Cricket(Simple Parellel Flow).ipynb  Essay Analysis(LLMs).ipynb
RAG Chatbot/: chatbot.db  rag_backend.py  rag_frontend.py  tempCodeRunnerFile.py
Sequential Workflow/: BMI Calculator(Simple).ipynb
Subgraph/: subgraph_invoke.ipynb  subgraph_without_invoke.ipynb
