[project]
name = "expense-tracker-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
]
